--- a/jinject-test/pom.xml
+++ b/jinject-test/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>jinject</artifactId>
             <version>1.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
             
     </dependencies>
 </project>
